# vlog-editor-fast

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  AI旅行Vlog剪辑系统PRD重构版.md  AI旅行Vlog剪辑系统方案.md  AI旅行Vlog开源工具调研.md  CLAUDE.md  Dockerfile.backend  PHASE6_COMPLETION.md  README.md  docker-compose.dev.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.claude/commands/: plan-talk-first.md
docs/: 01_验收用例与测试场景.md  02_关键交互稿与页面状态.md  03_数据字典与产物schema.md  REORGANIZATION_COMPLETE.md
docs/developer_guide/: performance_guide.md  testing_guide.md
docs/testing/: completion_report.md  phase6_fixes.md  phase6_report.md  phase6_summary.md  quick_reference.md  verification.md
docs/user_guide/: faq.md  quick_start.md  troubleshooting.md  workflow.md
performance_results/phase1/: phase1_benchmark_report.json
performance_results/phase2/: phase2_benchmark_report.json
plans/: 20260417_160004_purring-weaving-wren.md  20260417_161300_phase1-implementation.md  20260417_163110_plans-20260417-160004-purring-weaving-w-zany-nebula.md  20260417_164554_phase3-media-analysis-alignment.md  20260417_171023_plans-20260417-160004-purring-weaving-w-zany-nebula.md  20260417_174151_home-dev-vlog-editor-fast-plans-2026041-concurrent-grove.md  20260417_175738_phase6-testing-optimization.md  DEVELOPMENT_PLAN.md
scripts/: prepare-desktop-backend-runtime.sh  setup-local.sh  start-backend.sh  start-desktop-dev.sh
vlog-editor-desktop/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+103 files in other folders)
